# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta:__legacy__"

[tool.semantic_release]
branch = "main"
build_command = false
upload_to_repository = false
version_variable = [
    "setup.py:__version__",
    "symbolic/__init__.py:__version__",
]
version_pattern = [
    "CMakeLists.txt:VERSION {version}$",
]
