[build-system]
requires = ["packaging", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysymbolic"
version = "0.3.9"
authors = [
    {name = "Toki Migimatsu", email = "takatoki@cs.stanford.edu"}
]
description = "PDDL symbolic library"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tmigimatsu/symbolic"

# [tool.setuptools]
# packages = ["symbolic"]

[tool.semantic_release]
branch = "main"
build_command = false
upload_to_repository = false
upload_to_release = false
version_variable = [
    "setup.py:__version__",
    "symbolic/__init__.py:__version__",
]
version_pattern = [
    "CMakeLists.txt:VERSION {version}$",
    # "setup.cfg:version = {version}$"
]
version_toml = [
    "pyproject.toml:project.version"
]

[tool.cibuildwheel]
skip = [
    "pp*",
    "*-musllinux*",
]

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel.macos]
archs = ["universal2"]

[tool.cibuildwheel.macos.environment]
CMAKE_OSX_ARCHITECTURES = "arm64;x86_64"
MACOSX_DEPLOYMENT_TARGET = "10.14"
